Tiny footer alignment fix of messed up fix

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -58,7 +58,7 @@ footer {
 	ul {
 		display: flex;
 		flex-wrap: wrap;
-		align-items: center;
+		justify-content: center;
 		list-style: none;
 	}
 	
